--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Canon's Website</title>
+  </head>
+  <body>
+    <h1>Canons's Website</h1>
+    <p>This is a paragraph.</p>
+    <p><a href="sayersmith.github.io">Sayer's Website</a></p>
+  </body>
+</html>
