--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Canon's Website</title>
   </head>
   <body>
-    <h1>Canons's Website</h1>
+    <h1>Canon's Website</h1>
     <p>This is a paragraph.</p>
     <p><a href="sayersmith.github.io">Sayer's Website</a></p>
   </body>
