--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Canon's Website</h1>
     <p>This is a paragraph.</p>
-    <p><a href="sayersmith.github.io">Sayer's Website</a></p>
+    <p><a href="https://sayerjsmith.github.io">Sayer's Website</a></p>
   </body>
 </html>
