--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Canon's Website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Canon's Website</h1>
